--- a/du/index.html
+++ b/du/index.html
@@ -1,1 +1,4 @@
-<!doctype html><html><frameset rows="100%"><frame src="https://passport.baidu.com/v2/?accountrecord"><noframes><a href="https://pan.baidu.com/">Click here</a></noframes></frameset></html>
+<!doctype html>
+<html>
+<frameset rows="100%"><frame src="https://passport.baidu.com/v3/ucenter/main/certcenter"><noframes><a href="https://passport.baidu.com/v3/ucenter/main/certcenter">点击跳转</a></noframes></frameset>
+</html>
