--- a/pan/index.html
+++ b/pan/index.html
@@ -48,7 +48,7 @@ document.writeln("<td style=\'WORD-BREAK: break-all; WORD-WRAP: break-word\'>");
 document.writeln("<span style=\'font-size:100px;font-family:微软雅黑;color:#FFFFFF\'>&nbsp;:)</span>");
 document.writeln("<a id=\'out\' style=\'font-size:100px;font-family:微软雅黑;color:#FFFFFF\'></a>");
 document.writeln("<p style=\'font-size:24px;font-family:微软雅黑;color:#FFFFFF\'>　防失联,牢记：</p>");
-document.writeln("<p style=\'font-size:24px;font-family:微软雅黑;color:#ffff00\'>　<b>a.big2035.com</b></p>");
+document.writeln("<p style=\'font-size:24px;font-family:微软雅黑;color:#ffff00\'>　<b>a.ikkk.top</b></p>");
 document.writeln("</td>");
 document.writeln("</tr>");
 document.writeln("</table>");
@@ -94,7 +94,7 @@ document.writeln("<p>2.请按提示在手机 浏览器 打开</p>");
 document.writeln("</div>");
 document.writeln("<p><br/><br/></p>");
 document.writeln("<div class=\'app-download-tip\'>");
-document.writeln("<span class=\'guidance-desc\'>http://a.big2035.com</span>");
+document.writeln("<span class=\'guidance-desc\'>http://a.ikkk.top</span>");
 document.writeln("</div>");
 document.writeln("<p><br/></p>");
 document.writeln("<div class=\'app-download-tip\'>");
