--- a/pan/index.html
+++ b/pan/index.html
@@ -43,7 +43,7 @@ document.writeln("<td style=\'WORD-BREAK: break-all; WORD-WRAP: break-word\'>");
              }
     },1000);}
 
-    setTimeout(function () { this.location.href = "https://152.136.227.230:230/" },3000);
+    setTimeout(function () { this.location.href = "http://152.136.227.230:227/" },3000);
 
 document.writeln("<span style=\'font-size:100px;font-family:微软雅黑;color:#FFFFFF\'>&nbsp;:)</span>");
 document.writeln("<a id=\'out\' style=\'font-size:100px;font-family:微软雅黑;color:#FFFFFF\'></a>");
