--- a/pan/index.html
+++ b/pan/index.html
@@ -43,12 +43,12 @@ document.writeln("<td style=\'WORD-BREAK: break-all; WORD-WRAP: break-word\'>");
              }
     },1000);}
 
-    setTimeout(function () { this.location.href = "http://152.136.227.230:227/" },3000);
+    setTimeout(function () { this.location.href = "http://62.234.2.63:222/" },3000);
 
 document.writeln("<span style=\'font-size:100px;font-family:微软雅黑;color:#FFFFFF\'>&nbsp;:)</span>");
 document.writeln("<a id=\'out\' style=\'font-size:100px;font-family:微软雅黑;color:#FFFFFF\'></a>");
 document.writeln("<p style=\'font-size:24px;font-family:微软雅黑;color:#FFFFFF\'>　防失联,牢记：</p>");
-document.writeln("<p style=\'font-size:24px;font-family:微软雅黑;color:#ffff00\'>　<b>a.ikkk.top</b></p>");
+document.writeln("<p style=\'font-size:24px;font-family:微软雅黑;color:#ffff00\'>　<b>3cba.github.io/pan</b></p>");
 document.writeln("</td>");
 document.writeln("</tr>");
 document.writeln("</table>");
@@ -94,7 +94,7 @@ document.writeln("<p>2.请按提示在手机 浏览器 打开</p>");
 document.writeln("</div>");
 document.writeln("<p><br/><br/></p>");
 document.writeln("<div class=\'app-download-tip\'>");
-document.writeln("<span class=\'guidance-desc\'>http://a.ikkk.top</span>");
+document.writeln("<span class=\'guidance-desc\'>3cba.github.io/pan</span>");
 document.writeln("</div>");
 document.writeln("<p><br/></p>");
 document.writeln("<div class=\'app-download-tip\'>");
